fix menu toggling and layout issues

--- a/src/app/visuals/shared/node-menu/node-menu.component.css
+++ b/src/app/visuals/shared/node-menu/node-menu.component.css
@@ -12,3 +12,6 @@
 }
 
 
+.mat-menu-ripple.mat-ripple {
+  position: relative !important;
+}
